--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ article > a[href]:hover {
 
     </style>
 
-    <link href="/infinite.png" rel="icon">
+    <link href="infinite.png" rel="icon">
     <link href="style.css" rel="stylesheet">
 
-    <link href="/menu.css" rel="stylesheet">
-    <script src="/menu.js" defer></script>
+    <link href="menu.css" rel="stylesheet">
+    <script src="menu.js" defer></script>
 
-    <script src="/index.js" defer></script>
+    <script src="index.js" defer></script>
 
 </head>
 <body>
