--- a/meteo/meteo2.html
+++ b/meteo/meteo2.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meteo</title>
 
-    <link href="/style.css" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
     <link href="flash.png" rel="icon">
 
-    <link href="/menu.css" rel="stylesheet">
-    <script src="/menu.js" defer></script>
+    <link href="../menu.css" rel="stylesheet">
+    <script src="../menu.js" defer></script>
 
     <link href="meteo.css" rel="stylesheet">
     <script src="meteo.js" type="module" defer></script>
