--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quizz</title>
 
-    <link href="style.css" rel="stylesheet">
-    <link href="infinite.png" rel="icon">
+    <link href="../style.css" rel="stylesheet">
+    <link href="../infinite.png" rel="icon">
 
-    <link href="menu.css" rel="stylesheet">
-    <script src="menu.js" defer></script>
+    <link href="../menu.css" rel="stylesheet">
+    <script src="../menu.js" defer></script>
 
 <style>
 
