--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -32,8 +32,8 @@ article > a {
 
 </style>
 
-    <script src="Quizs.js" defer></script>
-    <script src="Quiz.js" defer type="module"></script>
+    <script src="quizs.js" defer></script>
+    <script src="quiz.js" defer type="module"></script>
 
 </head>
 <body>
