--- a/planning/planning.html
+++ b/planning/planning.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="planning.png">
     <link rel="stylesheet" href="planning.css">
 
-    <link href="/menu.css" rel="stylesheet">
-    <script src="/menu.js" defer></script>
+    <link href="../menu.css" rel="stylesheet">
+    <script src="../menu.js" defer></script>
     
     <script src="planning.js" type="module" defer></script>
 
